Generate all models
- Enable edit for the models with item providers and regenerate those.