@@ -4,7 +4,7 @@
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
  * https://www.eclipse.org/legal/epl-2.0/
- * 
+ *
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
@@ -31,12 +31,12 @@ import org.eclipse.emf.ecore.util.InternalEList;
  * <!-- end-user-doc -->
  * <p>
  * The following features are implemented:
+ * </p>
  * <ul>
  *   <li>{@link org.eclipse.datatools.modelbase.sql.routines.impl.ProcedureImpl#getMaxResultSets <em>Max Result Sets</em>}</li>
  *   <li>{@link org.eclipse.datatools.modelbase.sql.routines.impl.ProcedureImpl#isOldSavePoint <em>Old Save Point</em>}</li>
  *   <li>{@link org.eclipse.datatools.modelbase.sql.routines.impl.ProcedureImpl#getResultSet <em>Result Set</em>}</li>
  * </ul>
- * </p>
  *
  * @generated
  */
@@ -105,6 +105,7 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	protected EClass eStaticClass() {
 		return SQLRoutinesPackage.Literals.PROCEDURE;
 	}
@@ -114,6 +115,7 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public int getMaxResultSets() {
 		return maxResultSets;
 	}
@@ -123,11 +125,13 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public void setMaxResultSets(int newMaxResultSets) {
 		int oldMaxResultSets = maxResultSets;
 		maxResultSets = newMaxResultSets;
-		if (eNotificationRequired())
+		if (eNotificationRequired()) {
 			eNotify(new ENotificationImpl(this, Notification.SET, SQLRoutinesPackage.PROCEDURE__MAX_RESULT_SETS, oldMaxResultSets, maxResultSets));
+		}
 	}
 
 	/**
@@ -135,6 +139,7 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public boolean isOldSavePoint() {
 		return oldSavePoint;
 	}
@@ -144,11 +149,13 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public void setOldSavePoint(boolean newOldSavePoint) {
 		boolean oldOldSavePoint = oldSavePoint;
 		oldSavePoint = newOldSavePoint;
-		if (eNotificationRequired())
+		if (eNotificationRequired()) {
 			eNotify(new ENotificationImpl(this, Notification.SET, SQLRoutinesPackage.PROCEDURE__OLD_SAVE_POINT, oldOldSavePoint, oldSavePoint));
+		}
 	}
 
 	/**
@@ -156,6 +163,7 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public EList getResultSet() {
 		if (resultSet == null) {
 			resultSet = new EObjectContainmentEList(RoutineResultTable.class, this, SQLRoutinesPackage.PROCEDURE__RESULT_SET);
@@ -168,6 +176,7 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public NotificationChain eInverseRemove(InternalEObject otherEnd, int featureID, NotificationChain msgs) {
 		switch (featureID) {
 			case SQLRoutinesPackage.PROCEDURE__RESULT_SET:
@@ -181,10 +190,11 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public Object eGet(int featureID, boolean resolve, boolean coreType) {
 		switch (featureID) {
 			case SQLRoutinesPackage.PROCEDURE__MAX_RESULT_SETS:
-				return Integer.valueOf(getMaxResultSets());
+				return new Integer(getMaxResultSets());
 			case SQLRoutinesPackage.PROCEDURE__OLD_SAVE_POINT:
 				return isOldSavePoint() ? Boolean.TRUE : Boolean.FALSE;
 			case SQLRoutinesPackage.PROCEDURE__RESULT_SET:
@@ -198,6 +208,7 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public void eSet(int featureID, Object newValue) {
 		switch (featureID) {
 			case SQLRoutinesPackage.PROCEDURE__MAX_RESULT_SETS:
@@ -219,6 +230,7 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public void eUnset(int featureID) {
 		switch (featureID) {
 			case SQLRoutinesPackage.PROCEDURE__MAX_RESULT_SETS:
@@ -239,6 +251,7 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public boolean eIsSet(int featureID) {
 		switch (featureID) {
 			case SQLRoutinesPackage.PROCEDURE__MAX_RESULT_SETS:
@@ -256,8 +269,11 @@ public class ProcedureImpl extends RoutineImpl implements Procedure {
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public String toString() {
-		if (eIsProxy()) return super.toString();
+		if (eIsProxy()) {
+			return super.toString();
+		}
 
 		StringBuffer result = new StringBuffer(super.toString());
 		result.append(" (maxResultSets: "); //$NON-NLS-1$
